<resources>
    <string name="api_url" translatable="false">https://jeison-damian-bb0428f481f9.herokuapp.com/</string>
    <string name="app_name">virgen-peregrina-app</string>
    <string name="login_button" translatable="false">Continuar</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Contraseña</string>
    <string name="password_required" translatable="false">Contraseña *</string>
    <string name="button_action_continue" translatable="false">Continuar</string>
    <string name="error_login" translatable="false">Email o contraseña incorrecta, por favor verifique</string>
    <string name="label_register" translatable="false">Digite la siguiente información</string>
    <string name="label_country" translatable="false">País</string>
    <string name="error_invalid_user" translatable="false">There is no user record corresponding to this identifier. The user may have been deleted</string>
    <string name="label_have_replica" translatable="false">¿Eres custodio de Replica?</string>
    <string name="label_positive_action" translatable="false">Si</string>
    <string name="label_negative_action" translatable="false">No</string>
    <string name="switch_remember_loging" translatable="false">Recordar mis datos  </string>
    <string name="label_sing_up_login" translatable="false">¿No está registrado? Hazlo aquí</string>
    <string name="label_name_register_user_form" translatable="false">Nombres</string>
    <string name="label_last_name_register_user_form" translatable="false">Apellidos</string>
    <string name="label_phone_register_user_form" translatable="false">Celular</string>
    <string name="label_country_register_user_form" translatable="false">País</string>
    <string name="label_city_register_user_form" translatable="false">Ciudad</string>
    <string name="label_address_register_user_form" translatable="false">Dirección</string>
    <string name="label_no_testomonies" translatable="false">No hay testimonios</string>
    <string name="label_hint_select" translatable="false">Seleccione</string>
    <string name="label_year_select" translatable="false">Seleccione el año</string>
    <string name="label_who_receive" translatable="false">Datos de quien recibe</string>
    <string name="label_attendant_pilgrim" translatable="false">Miembro que acompaña</string>
    <string name="label_date_rank" translatable="false">de %1$s a %2$s</string>
    <string name="label_names_required_field" translatable="false">Nombres *</string>
    <string name="label_last_name_required_field" translatable="false">Apellidos *</string>
    <string name="label_email_required_field" translatable="false">Email *</string>
    <string name="label_cellphone_required_field" translatable="false">Celular *</string>
    <string name="label_country_required_field" translatable="false">País *</string>
    <string name="label_city_required_field" translatable="false">Ciudad *</string>
    <string name="label_address_required_field" translatable="false">Dirección *</string>
    <string name="label_pilgrim_attends_required_field" translatable="false">Peregrino *</string>
    <string name="label_start_date_required_field" translatable="false">Fecha de Inicio *</string>
    <string name="label_end_date_required_field" translatable="false">Fecha Final *</string>
    <string name="label_intention_required_field" translatable="false">Intención *</string>
    <string name="label_sending_request" translatable="false">Enviando solicitud…</string>
    <string name="label_type_name_hint_field" translatable="false">Escribe el nombre…</string>
    <string name="label_type_last_name_hint_field" translatable="false">Escribe el apellido…</string>
    <string name="label_type_email_hint_field" translatable="false">Escribe el correo…</string>
    <string name="label_type_cellphone_hint_field" translatable="false">Escribe el numero de celular…</string>
    <string name="label_type_country_hint_field" translatable="false">Escribe el país…</string>
    <string name="label_type_city_hint_field" translatable="false">Escribe la ciudad…</string>
    <string name="label_type_address_hint_field" translatable="false">Escribe la dirección…</string>
    <string name="label_type_pilgrim_hint_field" translatable="false">Selecciona el peregrino…</string>
    <string name="label_type_start_date_hint_field" translatable="false">Escribe la fecha de inicio…</string>
    <string name="label_type_end_date_hint_field" translatable="false">Escribe la fecha de finalizacion…</string>
    <string name="label_type_intention_hint_field" translatable="false">Escribe intención…</string>
    <string name="label_pilgrimage_finished_2" translatable="false">La peregrinación que acompañas ha finalizado, por favor, describe la experiencia</string>
    <string name="label_guidelines" translatable="false">Lineamientos</string>
    <string name="label_pilgrimage_guidelines" translatable="false">Lineamientos de Peregrinación</string>
    <string name="label_mobility_image_conditions" translatable="false">Condiciones de movilidad de la Imagen:</string>
    <string name="label_text_mobility_image_conditions" translatable="false">La imagen debe ser llevada al lugar de la visita y recuperada personalmente. En caso de no ser posible, deberán coordinar con otra persona de la misión que lo pueda realizar.</string>
    <string name="label_visit_time" translatable="false">Tiempo de Visita</string>
    <string name="label_text_visit_time" translatable="false">Uno (1) a quince (15) días</string>
    <string name="label_prayer_of_rosary" translatable="false">Rezo del Rosario</string>
    <string name="label_text_prayer_of_rosary" translatable="false">Previo al inicio del Santo Rosario, encender la vela dispuesta en el hogar visitado con la llama del amor hermoso. Seguir formato oficial del Rosario de la Misión MDG.</string>
    <string name="label_before_finishing_rosary" translatable="false">Antes de terminar el Rosario:</string>
    <string name="label_text_before_finishing_rosary" translatable="false">durante el rezo del Santo Rosario, luego de la oración de Consagración a la Virgen María y antes de la bendición final, los peregrinos deberán guiar dos momentos especiales:</string>
    <string name="label_text_before_finsihing_rosary_item_1" translatable="false">Contar la historia de la Imagen peregrina y/o leer algunos apartes de los mensajes que Nuestra Señora ha dado a Carolina Name y que están incluidos en el folleto de la misión peregrina.</string>
    <string name="label_text_before_finsihing_rosary_item_2" translatable="false">Si es posible y dependiendo del tiempo de la visita que tengan disponible en el lugar de peregrinación, los encargados de la misión invitarán a que cada persona asistente pase al frente de la Imagen y de rodillas, pida, en el silencio de su corazón, por todas sus intenciones.</string>
    <string name="label_final_farewell">Despedida Final</string>
    <string name="label_text_final_farewell">Oración de consagración a María. Bendición final</string>
    <string name="label_invitation" translatable="false">Invitación</string>
    <string name="label_text_invitation" translatable="false">Informar a la familia que se visita sobre las redes sociales de la misión YouTube, Instagram, Facebook:
@Carolina Name MDG y pagina oficial www.madredeladivinagracia.org
Invitarlos a que se conecten a los rosarios de los lunes, rosario de aurora del primer sábado de mes y a las diferentes actividades que se programen</string>
    <string name="label_virtual_pilgrimage">Peregrinación Virtual</string>
    <string name="label_text_virtual_pilgrimage">Aplican los mismos pasos anteriores, teniendo en cuenta que la Imagen MDG y el libro de notas deben ser llevados previamente y recogidos (ambos de manera personal).</string>
    <string name="label_text_how_to_care_replica" translatable="false">Antes de una visita, limpiar en seco la imagen Peregrina con trapo y al transportarla ojalá utilizar un estuche oficial o uno que sea seguro para este fin.

        \n\nPara la restauración de las imágenes por deterioro de tiempo y/o manipulación, se debe informar a la cabeza de la misión en cada ciudad, quien así mismo coordinará con el Comité de Virgen Peregrina en Colombia.

        \n\nSi la virgen sufre alguna rotura o accidente informar también a la cabeza de la misión o al Comité de Virgen Peregrina. Por favor no reparar, lijar, pintar o hacerle alguna modificación a la imagen.

        \n\nSi la imagen fue extraviada, la persona que realizó la visita debe informar a la cabeza de la misión o al Comité de Virgen Peregrina.

        \n\nEs importante recordar que estas imágenes de la Madre de la Divina Gracia de la Rosa de la Paz, son solo peregrinas, es decir están de paso en los lugares y por lo tanto NO están a la venta.

        \n\nEn caso de que alguien este interesado en la compra de la imagen pequeña pueden invitarlo a visitar @rositadegracia ó www.rositadegracia.com</string>
    <string name="label_good">Bueno</string>
    <string name="label_regular">Regular</string>
    <string name="label_bad">Malo</string>
    <string name="label_container_want">* Si deseas un estuche por favor envia un correo a quinteromau@gmail.com</string>
    <string name="label_send_email_generic">Por favor envia un correo a qinteromau@gmail.com</string>
    <string name="label_receiver_user_data">Recibidor</string>
    <string name="label_month_message">Mis corazones: Yo os bendigo a vosotros en nombre de Dios el Padre, el Hijo y el Espíritu Santo…

Mi corazón se regocija por vuestra presencia… Habéis rezado el rosario con devoción… Mi hijo Jesús os bendice, impone su mano sobre vuestra cabeza, pasa sanando vuestras pequeñas almas de vuestros dolores…

Yo soy la Inmaculada Concepción y siempre Virgen María, la madre de Jesús y vuestra Madre... Yo soy la Madre de la Divina Gracia, la Madre del Amor hermoso, vuestra Mamá… ¡Os exhorto hijos!... Os llamo… Os invito a llevar una vida de amor a los sacramentos…

Hijos: Si vosotros queréis ser salvos, debéis caminar por el sendero que os ha trazado mi Hijo… Sed buenos niños… Sed obedientes, puros de corazón, dóciles… Mi corazón de madre os acoge… Yo no os dejo solos…. Vosotros id, acudid, acompañad a mi Hijo en el Santísimo Sacramento… ¡Orad!... ¡Orad!... ¡Orad!... Sed oración… Buscad la gracia en las piscinas de la gracia… Dejad que el agua del costado de Cristo os purifique…

Yo os amo y, desde estas tierras tan amadas, yo os bendigo a vosotros hijos de la tierra y os pido, como madre preocupada, volved vuestros ojos a Dios… ¡Ya no es tiempo de dudar!... Os amo y os bendigo… Bendiciones… Bendiciones… Bendiciones…

Id en paz hijitos y llevad la paz a todos mis hijos confundidos y perdidos… En medio de la tempestad, sed fuente de calor, amor y ternura para tantos que viven en tristeza, desolación y soledad… Adiós mis hijos… Bendiciones… Bendiciones…</string>
    <string name="month_january" translatable="false">Ene</string>
    <string name="month_february" translatable="false">Feb</string>
    <string name="month_march" translatable="false">Mar</string>
    <string name="month_april" translatable="false">Abr</string>
    <string name="month_may" translatable="false">May</string>
    <string name="month_june" translatable="false">Jun</string>
    <string name="month_july" translatable="false">Jul</string>
    <string name="month_august" translatable="false">Ago</string>
    <string name="month_september" translatable="false">Sep</string>
    <string name="month_october" translatable="false">Oct</string>
    <string name="month_november" translatable="false">Nov</string>
    <string name="month_december" translatable="false">Dic</string>
    <string name="action_button_send" translatable="false">Send</string>
    <string name="replica_label_how_to_care_replica" translatable="false">Como cuidar tu replica</string>
</resources>